--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "Capstone project",
   "main": "app.js",
   "dependencies": {
-    "express": "^4.15.2"
+    "babel-loader": "^7.0.0",
+    "express": "^4.15.2",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "volleyball": "^1.4.1",
+    "webpack-livereload-plugin": "^0.11.0"
   },
   "devDependencies": {},
   "scripts": {
