--- a/package.json
+++ b/package.json
@@ -4,16 +4,23 @@
   "description": "Capstone project",
   "main": "app.js",
   "dependencies": {
+    "@google-cloud/language": "^0.10.3",
+    "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "express": "^4.15.2",
+    "node-event-emitter": "0.0.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "volleyball": "^1.4.1",
-    "webpack-livereload-plugin": "^0.11.0",
-    "@google-cloud/language": "^0.10.3"
+    "webpack-livereload-plugin": "^0.11.0"
   },
   "devDependencies": {},
   "scripts": {
+    "build": "webpack",
+    "build-watch": "npm run build -- -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
