--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "Capstone project",
   "main": "app.js",
   "dependencies": {
+    "@google-cloud/language": "^0.10.3",
     "babel-loader": "^7.0.0",
     "express": "^4.15.2",
+    "firebase": "^3.9.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "volleyball": "^1.4.1",
-    "webpack-livereload-plugin": "^0.11.0",
-    "@google-cloud/language": "^0.10.3"
+    "webpack-livereload-plugin": "^0.11.0"
   },
   "devDependencies": {},
   "scripts": {
