--- a/package.json
+++ b/package.json
@@ -19,13 +19,19 @@
     "volleyball": "^1.4.1",
     "webpack-livereload-plugin": "^0.11.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.3.0",
+    "supertest": "^3.0.0",
+    "supertest-as-promised": "^4.0.2"
+  },
   "scripts": {
     "build": "webpack",
     "build-watch": "npm run build -- -w",
     "seed": "node server/db/seed.js",
     "start": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --watch server/app/routes.test.js",
+    "grade": "mocha --reporter spec --timeout 300 server/app/routes.test.js"
   },
   "repository": {
     "type": "git",
